// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeForm renders default correctly 1`] = `
<div
  className="container  "
>
  <p
    className="description"
  >
    I write about ML, Web Dev, and more. 
    <b>
      Subscribe to get new posts by email!
    </b>
  </p>
  <form
    acceptCharset="utf-8"
    action="http://sendy.victorzhou.com/subscribe"
    method="post"
    target="_blank"
  >
    <input
      name="Source"
      type="hidden"
      value="test"
    />
    <input
      name="list"
      type="hidden"
      value="CWC7638hEb6mfk1RqUbJ763snA"
    />
    <input
      autoCapitalize="off"
      autoCorrect="off"
      name="hp"
      style={
        Object {
          "display": "none",
        }
      }
      tabIndex="-1"
      type="text"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="email"
      placeholder="example@domain.com"
      size="25"
      type="email"
    />
    <br />
    <input
      type="submit"
      value="SUBMIT"
    />
  </form>
</div>
`;

exports[`SubscribeForm renders large correctly 1`] = `
<div
  className="container large "
>
  <p
    className="description"
  >
    I write about ML, Web Dev, and more. 
    <b>
      Subscribe to get new posts by email!
    </b>
  </p>
  <form
    acceptCharset="utf-8"
    action="http://sendy.victorzhou.com/subscribe"
    method="post"
    target="_blank"
  >
    <input
      name="Source"
      type="hidden"
      value="test"
    />
    <input
      name="list"
      type="hidden"
      value="CWC7638hEb6mfk1RqUbJ763snA"
    />
    <input
      autoCapitalize="off"
      autoCorrect="off"
      name="hp"
      style={
        Object {
          "display": "none",
        }
      }
      tabIndex="-1"
      type="text"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="email"
      placeholder="example@domain.com"
      size="25"
      type="email"
    />
    <br />
    <input
      type="submit"
      value="SUBMIT"
    />
  </form>
</div>
`;
